Fix build warning
[Version] 0.10.158
[Profile] Common
[Issue Type] Bug fix
[Dependency module] N/A

Change-Id: I790a6216e9777e707bd977ddc5ffbf0c9fd39526
Signed-off-by: Jeongmo Yang <jm80.yang@samsung.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-Jeongmo Yang <jm80.yang at samsung dot com>
-Jonghyuk Choi <jhchoi.choi at samsung dot com>
+Jeongmo Yang <jm80.yang@samsung.com>
+Haesu Gwon <haesu.gwon@samsung.com>
